--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -127,7 +127,7 @@
   <!-- header -->
   <nav class="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer">VW
+      <a href="http://vickywang.me/" class="logo pointer colorSEER">VW
       </a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -141,14 +141,15 @@
         </ul>
       </div>
       <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="bar SEER"></span>
+        <span class="bar SEER"></span>
+        <span class="bar SEER"></span>
       </div>
     </div>
   </nav>
   <!-- Working process -->
   <div class="BGseer1">
+    <div class="blankMin1080"></div>
 
     <img src="SeerFull.svg" alt="SEER">
 
