--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         from the understanding of user needs and the business itself.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
-        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro">GitHub</a>
+        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro" target="_blank">GitHub</a>
         repository for more details.
       </p>
     </div>
@@ -231,6 +231,7 @@
           <div class="elementInner ShadowBox">
             <h4 class="allCaps">The way to use</h4>
             <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
 
             <h5> <strong> Solving problems by understand user &#38; product
               </strong> </h5>
@@ -249,6 +250,8 @@
           <div class="elementInner ShadowBox">
             <h4 class="allCaps">The way to integrate </h4>
             <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+
             <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
 
             <ul>
@@ -265,6 +268,8 @@
           <div class="elementInner ShadowBox">
             <h4 class="allCaps">The way to built </h4>
             <div class="lineHorizS"></div>
+            <div class="blankHXS"></div>
+
             <h5> <strong> Quality of design &#38; Implement
               </strong> </h5>
             <ul>
@@ -310,6 +315,8 @@
                   design </li>
               </ul>
             </li>
+            <div class="blankHXS"></div>
+
             <li class="progress__item">
               <h3>Design</h3>
               <ul>
@@ -320,6 +327,8 @@
                   function with geometrics during studying art and design </li>
               </ul>
             </li>
+            <div class="blankHXS"></div>
+
             <li class="progress__item">
               <h3>Architecture</h3>
               <ul>
@@ -332,6 +341,8 @@
                   single step is part of the final result. </li>
               </ul>
             </li>
+            <div class="blankHXS"></div>
+
             <li class="progress__item progress__item--active">
               <strong>
                 <h3>Product design </h3>
