--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@
   <div class="containerTQ">
     <img src="./image/me.jpg" alt="right">
     <div class="centeredTQ">
-      <p class=" tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-      <p class="displayNonePhone textM centerHorz" data-aos="fade-up">Learn more about my works
-        &nbsp; <a class="textProject" href="/project">here</a> </p>
+      <h3 class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </h3>
+      <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">Learn more about my works
+        &nbsp; <a class="textProject" href="/project">here</a> </h4>
     </div>
   </div>
   <!-- my photo -->
@@ -612,7 +612,7 @@
       </a>
 
       <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="./icon/in.svg" alt="linkedin">
+        <img class="footer-logo" src="./icon/in.svg" alt="linkedIn">
       </a>
 
       <a href="https://github.com/vicky-wyq">
@@ -620,7 +620,7 @@
       </a>
 
       <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="./icon/ins.svg" alt="medium">
+        <img class="footer-logo" src="./icon/ins.svg" alt="Instagram">
       </a>
     </div>
   </div>
