--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -380,7 +380,25 @@
           <!-- Arrow -->
 
           <div class="blankHXS"></div>
+          <!-- Challenge  -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4>By the Numbers. Average time to-hire across all industries is 3-4 weeks. </h4>
 
+                <h4 class="leftVerLine APPOINTA"> On average, recruiters are <strong
+                    class="textDecor APPOINTA">spending ⅔ of their
+                    overall hiring time on the interview process</strong>.</h4>
+                <h4 class="leftVerLine APPOINTA"> 67% of respondents say it takes between  <strong
+                  class="textDecor APPOINTA">30 minutes and 2 hours</strong> to
+                    schedule a single interview.</h4>
+
+
+
+              </div>
+            </div>
+          </div>
+          <!-- Challenge  -->
           <!-- Opportunity  -->
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
@@ -1521,7 +1539,7 @@
               <div class="left-zone">
                 <ul class="list">
                   <li class="item">
-                    <input type="radio" id="dropdown" name="UI" checked="checked"/>
+                    <input type="radio" id="dropdown" name="UI" checked="checked" />
                     <label class="dropdown" for="dropdown">Dropdown and tab</label>
                     <div class="content-test">
                       <img class="shadowFilterL" src="Components_dropdown.svg" alt="Components">
