--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang | Product Designer | UI/UX Designer | SEER </title>
+  <title>Vicky W. | Product Designer | UI/UX Designer | SEER </title>
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
+    content="Vicky Wang, Vicky W. Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
 
   <script type="application/ld+json">
@@ -158,7 +158,10 @@
         <div class="Grid-cell">
           <div class="element">
             <h1>SEER</h1>
-            <h4>A business sentiment analysis tool</h4>
+
+
+            <h4> Reddit<img class="IconS" src="../../icon/Reddit.svg" alt="Placeholder">
+              Keywords analyser</h4>
           </div>
         </div>
       </div>
@@ -204,55 +207,64 @@
     <div class="blankHS"></div>
     <section id="overview" class="">
 
-    <!-- Arrow -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="Grid">
-              <p class="tArrow"> Opportunity and use cases</p>
-              <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <!-- Arrow -->
+      <div class="wrapper">
+        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="Grid">
+                <p class="tArrow"> Opportunity and use cases</p>
+                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- Arrow -->
-    <!-- Opportunity and use cases -->
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4>My goal is to design a sentiment analysis tool to help the business owner <strong
-              class="textDecor SEER">grow their business</strong>. </h4>
-          <h4>
-            The business sentiment analysis tool is a process of collecting and analyzing <strong
-              class="textDecor SEER">large
-              volumes of data</strong> from <strong class="textDecor SEER">social networks,
-              websites, and other sources</strong> to determine what
-            people think about a particular company.</h4>
+      <!-- Arrow -->
+      <!-- Opportunity and use cases -->
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> Redditors are less welcoming of promoted content, topic and content are about
+              honesty and transparency. People like to read and share Reddit thoughts before or
+              after purchase. </h4>
 
-          <h4 class="leftVerLine SEER">Accompany want to know how people feel about a new
-            feature
-            launched, or a new item
-            released.</h4>
-          <h4 class="leftVerLine SEER">They also want to understand the positive and negative
-            experiences with the brand and products. understand the reason based on a bunch of
-            data</h4>
+
+
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <h4>My goal is to design a <strong class="textDecor SEER">keywords analysis
+                tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
+              Reddit. This app will help the business owner <strong
+                class="textDecor SEER">understand their customer</strong>.
+            </h4>
+
+            <h4>The keywords analysis tool collects and analyzes large volumes of data from Reddit
+              API. Displays data on the home page with filters based on the keywords set
+            </h4>
+            <h4>Use cases can be </h4>
+
+            <h4 class="leftVerLine SEER">Accompany want to know how people feel about a new
+              feature launched, or a new item released.</h4>
+            <h4 class="leftVerLine SEER">They also want to understand the positive and negative
+              experiences with the brand and products. understand the reason based on a bunch of
+              data</h4>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+
+            <h4>The customer support team is informed in real-time about any <strong
+                class="textDecor SEER">negative comments</strong>.
+            </h4>
+            <h4>The keywords on Reddit get detected extremely quickly </h4>
+
+          </div>
         </div>
       </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
-            research and more.</h4>
-          <h4>The customer support team is informed in real-time about any <strong
-              class="textDecor SEER">negative comments</strong>.
-          </h4>
-          <h4>The mentions on social media get detected extremely quickly </h4>
-
-        </div>
-      </div>
-    </div>
-    <!-- Opportunity and use cases -->
+      <!-- Opportunity and use cases -->
     </section>
     <section id="research" class="">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
@@ -286,7 +298,7 @@
                 three business owners for a semi-structured interview.
               </h4>
 
-              <h4> What are the sentiment analysis challenges?</h4>
+              <h4> What are the keywords analysis challenges?</h4>
               <h4> Do you use any sentiment analysis tools?</h4>
               <h4> What data do you want to see every day if you have a dashboard for sentiment
                 analysis</h4>
@@ -336,7 +348,7 @@
         </div>
         <!-- user Journey -->
       </section>
-      <div class="blankHXS"></div>
+      <div class="blankHS"></div>
 
       <section id="personas" class="">
 
@@ -363,18 +375,14 @@
                 <img class="" src="../../Placeholder.svg" alt="Placeholder">
                 <div class="blankHS"></div>
 
-                <h5> <strong>Insights:</strong> From the hiring manager interview, I realized the
-                  challenge of scheduling interviews not just to match the right date and time,
-                  but
-                  also need to find a way to sync team availability and interview skill set</h5>
+                <h5> <strong>Insights:</strong> x</h5>
               </div>
               <div class="blankHS"></div>
 
               <div class="element">
                 <img class="" src="../../Placeholder.svg" alt="Placeholder">
                 <div class="blankHS"></div>
-                <h5> <strong>Insights:</strong> From the recruiter interview, I learned the way to
-                  match between hiring managers and candidate availability is crucial</h5>
+                <h5> <strong>Insights:</strong> x</h5>
               </div>
             </div>
           </div>
@@ -382,19 +390,17 @@
         <!-- Personas -->
       </section>
     </section>
-    <div class="elementSeerDivider"></div>
 
 
-    <section id="ideation" class="BGseer1">
+    <section id="ideation">
       <div class="blankHXS"></div>
-
       <!-- Arrow -->
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
           <div class="Grid-cell">
             <div class="element">
               <div class="Grid">
-                <p class="tArrow"> Initial concepts</p>
+                <p class="tArrow"> How it works</p>
                 <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
               </div>
             </div>
@@ -402,124 +408,206 @@
         </div>
       </div>
       <!-- Arrow -->
-
-
       <div class="blankHS"></div>
+
+
+      <div class="BGseer1">
+        <div class="wrapper">
+          <div class="Grid Grid--full u-textCenter ">
+
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardBG ">
+                  <img class="iconM" src="icon_User.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> User create keywords </strong> </h5>
+                  <ul class="liNone">
+                    <li> Input keywords</li>
+                    <li> Save keywords </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardBG ">
+                  <img class="iconM" src="icon_Monitor.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Queries Reddit post API </strong> </h5>
+                  <ul class="liNone">
+                    <li> Mid-level front-end</li>
+                    <li> Senior product manager</li>
+
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardBG ">
+                  <img class="iconM" src="icon_Monitor.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Label posts based on keywords </strong> </h5>
+                  <ul class="liNone">
+                    <li> Determine post has keywords</li>
+                    <li> Determine sentiment score</li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInner cardBG">
+                  <img class="iconM" src="icon_User.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> View dashboard </strong> </h5>
+                  <ul class="liNone">
+                    <li> Visualize data</li>
+                    <li> Customize data chart</li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="blankHS"></div>
+
       </div>
-      <!-- Product / Features -->
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--cols-3">
-          <div class="Grid-cell">
-            <div class="elementSEER">
-              <div class="elementInnerSEER  heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-                <div class="blankHXS"></div>
-                <h5> <strong> Create keywords </strong> </h5>
-                <ul>
-                  <li> Combine team members' availability</li>
-                  <li> Schedule interviews base on availability </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner cardBG heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
 
-                <div class="blankHXS"></div>
-                <h5> <strong> Save keywords get notification </strong> </h5>
-                <ul>
-                  <li> Portfolio review</li>
-                  <li> Phone screen </li>
-                  <li> Frond end </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner cardBG heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
 
-                <div class="blankHXS"></div>
-                <h5> <strong> Data Comparison </strong> </h5>
-                <ul>
-                  <li> Mid-level front-end</li>
-                  <li> Senior product manager</li>
-                  <li> Staff designer</li>
+      <div class="elementSeerDivider"></div>
 
-                </ul>
+      <!-- Arrow -->
+
+      <div class="BGseer1">
+        <div class="blankHS"></div>
+
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Initial concepts</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Arrow -->
 
-        <div class="Grid-cell">
-          <div class="element">
-            <h5> <strong>Minimal features for the first version:</strong> Adding team member
-              availability and skills is the no.1 priority.
-            </h5>
+
+        <div class="blankHS"></div>
+
+        <!-- Product / Features -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-3">
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Create keywords </strong> </h5>
+                  <ul>
+                    <li> Combine team members' availability</li>
+                    <li> Schedule interviews base on availability </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Notification </strong> </h5>
+                  <ul>
+                    <li> Portfolio review</li>
+                    <li> Phone screen </li>
+                    <li> Frond end </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Data Comparison </strong> </h5>
+                  <ul>
+                    <li> Mid-level front-end</li>
+                    <li> Senior product manager</li>
+                    <li> Staff designer</li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-3">
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Dashboard </strong> </h5>
+                  <ul>
+                    <li> Combine team members' availability</li>
+                    <li> Schedule interviews base on availability </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong>Data explore/drill down </strong> </h5>
+                  <ul>
+                    <li> Portfolio review</li>
+                    <li> Phone screen </li>
+                    <li> Frond end </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell element">
+              <div class="elementSEER">
+                <div class="elementInnerSEER heightM">
+                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+
+                  <div class="blankHXS"></div>
+                  <h5> <strong> Export Data </strong> </h5>
+                  <ul>
+                    <li> Mid-level front-end</li>
+                    <li> Senior product manager</li>
+                    <li> Staff designer</li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product / Features -->
+        <div class="blankHM"></div>
+
       </div>
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--cols-3">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner cardBG heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-                <div class="blankHXS"></div>
-                <h5> <strong> Dashboard </strong> </h5>
-                <ul>
-                  <li> Combine team members' availability</li>
-                  <li> Schedule interviews base on availability </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner cardBG heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-
-                <div class="blankHXS"></div>
-                <h5> <strong>Data explore/drill down </strong> </h5>
-                <ul>
-                  <li> Portfolio review</li>
-                  <li> Phone screen </li>
-                  <li> Frond end </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner cardBG heightM">
-                <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-
-                <div class="blankHXS"></div>
-                <h5> <strong> Export Data </strong> </h5>
-                <ul>
-                  <li> Mid-level front-end</li>
-                  <li> Senior product manager</li>
-                  <li> Staff designer</li>
-
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="Grid-cell">
-          <div class="element">
-            <h5> <strong>Minimal features for the first version:</strong> Adding team member
-              availability and skills is the no.1 priority.
-            </h5>
-          </div>
-        </div>
-      </div>
-      <!-- Product / Features -->
     </section>
 
     <div class="blankHXS"></div>
