--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -160,7 +160,7 @@
             <h1>SEER</h1>
 
 
-            <h4> Reddit<img class="IconS" src="../../icon/Reddit.svg" alt="Placeholder">
+            <h4> Reddit<img class="IconS" src="Reddit.svg" alt="Placeholder">
               Keywords analyser</h4>
           </div>
         </div>
@@ -205,67 +205,6 @@
     </nav>
 
     <div class="blankHS"></div>
-    <section id="overview" class="">
-
-      <!-- Arrow -->
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="Grid">
-                <p class="tArrow"> Opportunity and use cases</p>
-                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Arrow -->
-      <!-- Opportunity and use cases -->
-      <div class="Grid Grid--full wrapper">
-        <div class="Grid-cell">
-          <div class="element">
-            <h4> Redditors are less welcoming of promoted content, topic and content are about
-              honesty and transparency. People like to read and share Reddit thoughts before or
-              after purchase. </h4>
-
-
-
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <h4>My goal is to design a <strong class="textDecor SEER">keywords analysis
-                tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
-              Reddit. This app will help the business owner <strong
-                class="textDecor SEER">understand their customer</strong>.
-            </h4>
-
-            <h4>The keywords analysis tool collects and analyzes large volumes of data from Reddit
-              API. Displays data on the home page with filters based on the keywords set
-            </h4>
-            <h4>Use cases can be </h4>
-
-            <h4 class="leftVerLine SEER">Accompany want to know how people feel about a new
-              feature launched, or a new item released.</h4>
-            <h4 class="leftVerLine SEER">They also want to understand the positive and negative
-              experiences with the brand and products. understand the reason based on a bunch of
-              data</h4>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-
-            <h4>The customer support team is informed in real-time about any <strong
-                class="textDecor SEER">negative comments</strong>.
-            </h4>
-            <h4>The keywords on Reddit get detected extremely quickly </h4>
-
-          </div>
-        </div>
-      </div>
-      <!-- Opportunity and use cases -->
-    </section>
     <section id="research" class="">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
@@ -275,7 +214,71 @@
         </div>
       </div>
       <div class="blankHXS"></div>
+
+      <section id="overview" class="">
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Opportunity and use cases</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <!-- Opportunity and use cases -->
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h4> Redditors are less welcoming of promoted content, topic and content are about
+                honesty and transparency. People like to read and share Reddit thoughts before or
+                after purchase. </h4>
+
+
+
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h4>My goal is to design a <strong class="textDecor SEER">keywords analysis
+                  tool</strong> with <strong class="textDecor SEER">sentiment score</strong> for
+                Reddit. This app will help the business owner <strong
+                  class="textDecor SEER">understand their customer</strong>.
+              </h4>
+
+              <h4>The keywords analysis tool collects and analyzes large volumes of data from Reddit
+                API. Displays data on the home page with filters based on the keywords set
+              </h4>
+              <h4>Use cases can be </h4>
+
+              <h4 class="leftVerLine SEER">Accompany want to know how people feel about a new
+                feature launched, or a new item released.</h4>
+              <h4 class="leftVerLine SEER">They also want to understand the positive and negative
+                experiences with the brand and products. understand the reason based on a bunch of
+                data</h4>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+
+              <h4>The customer support team is informed in real-time about any <strong
+                  class="textDecor SEER">negative comments</strong>.
+              </h4>
+              <h4>The keywords on Reddit get detected extremely quickly </h4>
+
+            </div>
+          </div>
+        </div>
+        <!-- Opportunity and use cases -->
+      </section>
+
       <section id="interview">
+
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -295,7 +298,7 @@
           <div class="Grid-cell">
             <div class="element">
               <h4> To quickly inquire about the pain points and current solutions, I approached
-                three business owners for a semi-structured interview.
+                three people for a semi-structured interview.
               </h4>
 
               <h4> What are the keywords analysis challenges?</h4>
@@ -393,25 +396,28 @@
 
 
     <section id="ideation">
-      <div class="blankHXS"></div>
-      <!-- Arrow -->
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="Grid">
-                <p class="tArrow"> How it works</p>
-                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+
+      <div class="BGseer0">
+
+
+        <div class="blankHXS"></div>
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> How it works</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- Arrow -->
-      <div class="blankHS"></div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
 
 
-      <div class="BGseer1">
         <div class="wrapper">
           <div class="Grid Grid--full u-textCenter ">
 
@@ -431,6 +437,15 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
+                <img class="iconM" src="ArrowFat.svg" alt="icon">
+                <div class="blankHXS"></div>
+              </div>
+            </div>
+
+
+
+            <div class="Grid-cell">
+              <div class="element">
                 <div class="elementInner cardBG ">
                   <img class="iconM" src="icon_Monitor.svg" alt="icon">
 
@@ -439,10 +454,14 @@
                   <ul class="liNone">
                     <li> Mid-level front-end</li>
                     <li> Senior product manager</li>
-
-
                   </ul>
                 </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="iconM" src="ArrowFat.svg" alt="icon">
+                <div class="blankHXS"></div>
               </div>
             </div>
             <div class="Grid-cell">
@@ -458,6 +477,12 @@
 
                   </ul>
                 </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="iconM" src="ArrowFat.svg" alt="icon">
+                <div class="blankHXS"></div>
               </div>
             </div>
             <div class="Grid-cell">
@@ -673,8 +698,7 @@
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
-                <h5> <strong>Recruiters account - onboarding&#58;</strong> Invite team member,
-                  setup team member skills, share link with candidates
+                <h5> <strong>xxx&#58;</strong> xxx
                 </h5>
               </div>
             </div>
